fixes #15 - footer looking nice on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,7 @@ footer {
 
 #wikidata {
 	min-width: 150px;
+	max-width: 200px;
 }
 
 #page-container {
